Add delete button

--- a/src/app/tasklist/tasklist.html
+++ b/src/app/tasklist/tasklist.html
@@ -23,8 +23,9 @@
       <span class="category">{{ task.category }}</span>
     </div>
 
-    <button (click)="deleteTask(i)">d</button>
-    <!-- <img src="assets/delete.png" alt="" /> -->
+    <button (click)="deleteTask(i)" class="deleteBtn">
+      <img src="assets/delete.png" alt="" class="delete" />
+    </button>
   </div>
   } }
 </section>
